--- a/index.html
+++ b/index.html
@@ -73,13 +73,22 @@
             <!-- Header -->
             <header class="header">
                 <div class="search-container">
-                    <input type="text" class="search-input" placeholder="Search" value="aesthetic" id="searchInput">
+                    <input type="text" class="search-input" placeholder="Search" id="searchInput" autocomplete="off">
                     <button class="search-clear" id="clearSearch">
                         <svg viewBox="0 0 24 24" fill="currentColor">
                             <path
                                 d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z" />
                         </svg>
                     </button>
+                    <!-- Search Overlay moved inside container -->
+                    <div class="search-overlay" id="searchOverlay">
+                        <div class="search-overlay-inner">
+                            <h2 class="recent-searches-title">Recent searches</h2>
+                            <div class="recent-searches-grid" id="recentSearchesGrid">
+                                <!-- Suggested searches will be injected here -->
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="header-right">
                     <div class="dropdown-wrapper" id="allPinsDropdown">
